# cbt-emulator

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: alu.rs  bus.rs  clock.rs  cpu.rs  cw.rs  interrupts.rs  js.rs  lcd.rs  lib.rs  memory.rs  microcode.rs  pc.rs  reg.rs
tests/: integration_test.rs
tests/common/: mod.rs
ucode/: README.md  genMicrocode.py  generate.py  instructions.py  ucode.zstd  variables.py
web/: package-lock.json  package.json
web/public/: index.html  manifest.json
web/public/lcd-font/: readme.txt
web/src/: App.css  App.test.tsx  App.tsx  Modules.tsx  alu.tsx  clk.tsx  cpu.tsx  cw.tsx  index.tsx  lcd.tsx  register.tsx
web/src/css/: App.scss  elements.scss  inputs.scss  vars.scss
