[package]
name = "cbt_emulator"
version = "0.1.0"
edition = "2021"
authors = ["Maks Rawski <maksymilian.rawski@tutanota.com>"]
license = "MIT or Apache-2.0"

[lib]
name = "cbt_emulator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = [ "console_error_panic_hook" ]

[dependencies]
wasm-bindgen = { version = "0.2.82" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.60"

zstd-safe = { version = "5.0.2", default-features = false, features = ["std"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
